--- a/app/views/coach/accounts/index.html.erb
+++ b/app/views/coach/accounts/index.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='flex-space-between'>
-    <h1 class='coach-profile-header'>Accounts</h1>
+    <h1 class='header'>Accounts</h1>
   </div>
   <div class='accounts-container'>
     <% date = "" %>
