--- a/app/views/coach/coach_profiles/show.html.erb
+++ b/app/views/coach/coach_profiles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class='coach-profile-header header-flex'>
+  <div class='header header-flex'>
     <h1>My Coach Profile</h1>
     <%= link_to "Back", :back, class:"back-btn" %>
   </div>
