--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,17 +1,16 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 10px 0;
-  height: 90vh;
+  padding: 70px 0;
+  height: 52vh;
 }
 
 .banner h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 50px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 .banner p {
@@ -22,17 +21,5 @@
 }
 
 .banner-container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.banner-details {
-  padding-top: 200px;
-  width: 25%;
-  text-align: center;
-}
-
-.banner-sub-details {
-  padding-top: 10px;
+  padding: 20px;
 }
