--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -8,18 +8,13 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background: black;
+  background: white;
   margin-bottom: 8px;
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 8px;
   padding-bottom: 8px;
   transition: 400ms ease-in;
-  border-style: solid;
-  border-width: 0.1rem;
-  border-color: white;
-  color:white;
-  font-weight: 300;
 
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -97,12 +92,12 @@
   text-decoration: none;
   margin: 0.5rem;
   padding:0.5rem;
-  color: $dark-orange;
+  color: #333333;
   font-weight: bold;
 
   &:hover {
     text-decoration: none;
-    color: $orange;
+    color: #333333;
    }
   &::after {
     content: '';
@@ -145,8 +140,4 @@
     opacity: 1;
     transform: scaleY(1)
   }
-}
-
-.coach-lessons-header {
-  color: white;
 }
