--- a/app/views/coach/lessons/edit.html.erb
+++ b/app/views/coach/lessons/edit.html.erb
@@ -1,16 +1,14 @@
-<div class='modal-content fixed-modal'>
-  <div class="modal-header">
-    <h5 class="modal-title">Edit Lesson</h5>
-    <%= link_to "X", :back, class:"back-btn" %>
+<div class='container form'>
+  <div class='header header-flex'>
+    <h2>Edit lesson</h2>
+    <%= link_to "Back", :back, class:"back-btn" %>
   </div>
-  <div class="modal-body">
-    <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path) do |f|%>
-      <%= f.input :start_date_time, :as => :datetime, html5: true %>
-      <%= f.input :end_date_time, :as => :datetime, html5: true %>
+  <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path) do |f|%>
+      <%= f.input :start_date_time, :as => :datetime %>
+      <%= f.input :end_date_time, :as => :datetime %>
       <%= f.input :description %>
       <%= f.association :location %>
       <%= f.input :price, as: :numeric %>
-      <%= f.submit class:'btn btn-primary float-right' %>
-    <% end %>
-  </div>               
+      <%= f.submit class:'btn btn-primary' %>
+  <% end %>
 </div>
