--- a/app/views/coach/lessons/new.html.erb
+++ b/app/views/coach/lessons/new.html.erb
@@ -1,16 +1,14 @@
-<div class='modal-content fixed-modal'>
-  <div class="modal-header">
-    <h5 class="modal-title">New Lesson</h5>
-    <%= link_to "X", :back, class:"back-btn" %>
+<div class='container form'>
+  <div class='header header-flex'>
+    <h2>New lesson</h2>
+    <%= link_to "Back", :back, class:"back-btn" %>
   </div>
-  <div class="modal-body">
-    <%= simple_form_for @lesson, method: :post, url: :coach_lessons, html: { data: { lesson_target: 'newForm', action: 'submit->lesson#create' } }  do |f|%>
-            <%= f.input :start_date_time, :as => :datetime, html5: true %>
-            <%= f.input :end_date_time, :as => :datetime, html5: true %>
-            <%= f.input :description %>
-            <%= f.association :location %>
-            <%= f.input :price, as: :numeric %>
-            <%= f.submit class:'btn btn-primary float-right' %>
-    <% end %>
-  </div>               
+  <%= simple_form_for(@lesson, method: :post, url: :coach_lessons) do |f|%>
+      <%= f.input :start_date_time, :as => :datetime %>
+      <%= f.input :end_date_time, :as => :datetime %>
+      <%= f.input :description %>
+      <%= f.association :location %>
+      <%= f.input :price, as: :numeric %>
+      <%= f.submit class:'btn btn-primary' %>
+  <% end %>
 </div>
