--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,12 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class='flex'>
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "https://res.cloudinary.com/dcwfy3dua/image/upload/v1640006761/sportmelite/Sportme_3_n4b85j.png" %>
+      <%= image_tag "https://artprojectsforkids.org/wp-content/uploads/2021/05/Draw-a-Soccer-Ball.jpg.webp" %>
     <% end %>
   </div>
-  <%# <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button> %>
+  </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
