--- a/app/views/lessons/_lesson_card.html.erb
+++ b/app/views/lessons/_lesson_card.html.erb
@@ -1,7 +1,7 @@
 <div class="lesson-card">
     <div class="lesson-date">
     <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
-    <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
+    <span class="lesson-date time"><%= lesson.start_date_time.strftime("%I:%M%p") %></span>
     <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
     </div>
 
