--- a/app/views/coach/lessons/new.html.erb
+++ b/app/views/coach/lessons/new.html.erb
@@ -10,7 +10,8 @@
             <%= f.input :description %>
             <%= f.association :location %>
             <%= f.input :price, as: :numeric %>
+            <%= f.input :sport_id %>
             <%= f.submit class:'btn btn-primary float-right' %>
     <% end %>
-  </div>               
+  </div>
 </div>
