--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -11,7 +11,7 @@
       <input id='selectDateInput' type='date'>
     </form>
   </div>
-  
+
   <div class='lesson-header-links'>
     <%= link_to 'All', coach_lessons_path, class:"lesson-header-link active", data: { action: 'click->lesson#displayLessons'}, remote: true %>
     <%= link_to 'Upcoming', upcoming_coach_lessons_path, class:"lesson-header-link", data: { action: 'click->lesson#displayLessons'}, remote: true  %>
@@ -42,6 +42,7 @@
             <%= f.input :description %>
             <%= f.association :location %>
             <%= f.input :price, as: :numeric %>
+            <%= f.input :sport_id, :as => "hidden", :input_html => { :value => current_user.sport.id } %>
             <%= f.submit class:'btn btn-primary float-right' %>
         <% end %>
           </div>
@@ -50,4 +51,3 @@
     </div>
 
   </div>
-
