--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -5,12 +5,7 @@
     <%= link_to 'New Lesson', new_coach_lesson_path, class:"btn btn-flat", data: { target: '#newLessonModal', toggle: 'modal'}  %>
   </div>
 
-  <div id='calendar' data-events="<%= @lessons_json %>"><div class="spinner hide"></div></div>
-  <div class="collapse" id="selectDate" class='m2'>
-    <form>
-      <input id='selectDateInput' type='date'>
-    </form>
-  </div>
+  <%= render 'calendar'%>
   
   <div class='lesson-header-links'>
     <%= link_to 'All', coach_lessons_path, class:"lesson-header-link active", data: { action: 'click->lesson#displayLessons'}, remote: true %>
