--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,7 +46,7 @@
         <% end %>
 
         <li class="nav-item dropdown">
-        <% if current_user.coach_profile %>
+        <% if current_user.coach_profile && current_user.coach_profile.photo_key %>
           <%= image_tag current_user.coach_profile.photo_key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <% else %>
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
