--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -1,9 +1,3 @@
-#calendar {
-  max-width: 900px;
-  margin: 0 auto;
-  max-height: 900px;
-}
-
 .lesson-card {
   display: flex;
   align-items: center;
@@ -136,6 +130,10 @@
   transform-origin: left top;
 }
 
+.modal-content {
+  color: black;
+}
+
 @keyframes show-lessons {
   from {
     opacity: 0;
@@ -147,6 +145,3 @@
   }
 }
 
-.coach-lessons-header {
-  color: white;
-}
