small formatting change so username can be seen in chat

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -190,6 +190,10 @@ body{
   background: #efefef
 }
 
+.message-user {
+  color: darkgray;
+}
+
 // arrow on chat message
 // .chat .chat-history .my-message:after {
 //   bottom: 100%;
