--- a/app/assets/stylesheets/components/_accounts.scss
+++ b/app/assets/stylesheets/components/_accounts.scss
@@ -1,3 +1,21 @@
+.charts-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.accounts-chart {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.accounts-chart h3 {
+  font-size: 22px;
+}
+
 .accounts-card {
   display: flex;
   align-items: center;
