fixed some bugs and changed layout

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -13,3 +13,15 @@
 .fc-toolbar-title {
     color: white;
 }
+
+.hover-end {
+    padding:0;
+    margin:0;
+    font-size:75%;
+    text-align:center;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    opacity:.8;
+    color: white;
+}
