--- a/app/views/coach/lessons/_show.html.erb
+++ b/app/views/coach/lessons/_show.html.erb
@@ -6,16 +6,14 @@
       <% else %>
         (Not Booked)
       <% end %></span></h5>
-      <% if lesson.google_event_id%>
-        <%= link_to 'Remove from Google Calendar',  unsync_from_google_coach_lesson_path(lesson), class:'btn btn-primary btn-sm' %>
-      <% else %>
-        <%= link_to 'Add to Google Calendar',  sync_to_google_coach_lesson_path(lesson), class:'btn btn-primary btn-sm' %>
-      <% end %>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body" data-lesson-target='modalContent'>
+  <div class='float-right'>
+   <input class="checkbox" data-lesson-id='<%=lesson.id%>' <%= lesson.google_event_id ? 'checked' : '' %> id='syncEventToGoogleCheckbox' type="checkbox" role='button' data-action='click->lesson#toggleSyncEventToGoogle'> <label for='syncEventToGoogleCheckbox' role='button'>Sync to Google Calendar</label>
+   </div>
       <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%I:%M%p") %> - <%= lesson.end_date_time.strftime("%I:%M%p") %> </p>
       <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
       <% if current_page?(coach_lessons_path)%>
