--- a/app/views/coach/lessons/_show.html.erb
+++ b/app/views/coach/lessons/_show.html.erb
@@ -12,7 +12,9 @@
   </div>
   <div class="modal-body" data-lesson-target='modalContent'>
   <div class='float-right'>
-   <input class="checkbox" data-lesson-id='<%=lesson.id%>' <%= lesson.google_event_id ? 'checked' : '' %> id='syncEventToGoogleCheckbox' type="checkbox" role='button' data-action='click->lesson#toggleSyncEventToGoogle'> <label for='syncEventToGoogleCheckbox' role='button'>Sync to Google Calendar</label>
+    <% if current_user.access_token %>
+    <input class="checkbox" data-lesson-id='<%=lesson.id%>' <%= lesson.google_event_id ? 'checked' : '' %> id='syncEventToGoogleCheckbox' type="checkbox" role='button' data-action='click->lesson#toggleSyncEventToGoogle'> <label for='syncEventToGoogleCheckbox' role='button'>Sync to Google Calendar</label>
+    <% end %>
    </div>
       <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%I:%M%p") %> - <%= lesson.end_date_time.strftime("%I:%M%p") %> </p>
       <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
