--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -58,6 +58,14 @@
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
+
+        <li class="nav-item dropdown" data-controller="notification" data-notification-target="notifications" id="notifications">
+          <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-action="click->notification#markRead" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="far fa-bell"></i> <span data-notification-target="unreadCount"></span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          </div>
+        </li>
       <% else %>
         <li class="nav-item">
           <%= link_to "Sign Up!", new_user_registration_path, class: "btn btn-flat" %>
