work in progress

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -2,7 +2,7 @@
   bottom: -2.4375rem;
 }
 .carousel-indicators li {
-  background-color: #ccc;
+  // background-color: #ccc;
 }
 
 .carousel-control-prev {
