--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,12 +5,12 @@
 @import "navbar";
 @import "banner";
 @import "button";
-@import "lessons";
+// @import "lessons";
 @import "form";
 @import "sport-card";
 @import "coach-card";
 @import "carousel";
-@import "accounts";
-@import "chat";
-@import "coach-profile";
+// @import "accounts";
+// @import "chat";
+// @import "coach-profile";
 @import "calendar";
