--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky">
-  <div class='flex'>
-    <%= link_to root_path, class: "navbar-brand" do %>
+<div class="navbar navbar-expand-sm">
+  <div class='navbar-logo'>
+    <%= link_to root_path do %>
       <%= image_tag "https://res.cloudinary.com/dcwfy3dua/image/upload/v1640006761/sportmelite/Sportme_3_n4b85j.png" %>
     <% end %>
   </div>
