--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -1,5 +1,5 @@
 .chat {
-  background: white;
+  // background: white;
   height: calc(100vh - 66px);
   display: flex;
   flex-direction: column;
@@ -39,10 +39,10 @@
   }
 }
 
-body{
-  background-color: #f4f7f6;
-  margin-top:20px;
-}
+// body{
+//   // background-color: #f4f7f6;
+//   margin-top:20px;
+// }
 .card {
   background: #fff;
   transition: .5s;
