--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,7 @@
 // Import page-specific CSS files here.
+
+@import "accounts";
+@import "chat";
+@import "coach-profile";
 @import "home";
+@import "lessons";
