--- a/app/views/coach/lessons/edit.text.erb
+++ b/app/views/coach/lessons/edit.text.erb
@@ -10,7 +10,7 @@
       <%= f.input :description %>
       <%= f.association :location %>
       <%= f.input :price, as: :numeric %>
-      <%= f.submit class:'btn btn-primary float-right' %>
+      <%= f.submit class:'btn button-primary float-right' %>
   <% end %>
   </div>
 </div>
