--- a/app/views/coaches/_lessonlist.html.erb
+++ b/app/views/coaches/_lessonlist.html.erb
@@ -24,7 +24,7 @@
             <%# <%= link_to "Book Lesson", make_booking_lesson_path(lesson), class:'btn-flat' %>
             <%= form_tag orders_path do %>
               <%= hidden_field_tag 'lesson_id', lesson.id %>
-              <%= submit_tag 'Book Lesson', class: 'btn btn-primary' %>
+              <%= submit_tag 'Book Lesson', class: 'btn button-primary' %>
             <% end %>
           </div>
         </div>
