--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -34,7 +34,7 @@
     </div>
   </div>
   <hr>
-<button class='btn btn-primary' id='coach-toggle-btn' data-toggle="collapse" href="#coach-lessons-list" aria-expanded="false">Show Lessons</button>
+<button class='btn button-primary' id='coach-toggle-btn' data-toggle="collapse" href="#coach-lessons-list" aria-expanded="false">Show Lessons</button>
 
 <%# coach lessons  %>
 <div class="container mt-3 collapse" id='coach-lessons-list'>
