--- a/app/views/coach/lessons/_lessons_list.html.erb
+++ b/app/views/coach/lessons/_lessons_list.html.erb
@@ -5,8 +5,15 @@
       </div>
       <% else %>
         <div>
+         <% date = "" %>
           <% @lessons.each do |lesson| %>
+          <% if lesson.start_date_time.localtime.strftime("%d %b %Y") != date %>
+            <div class='accounts-date-card'> <%= lesson.start_date_time.localtime.strftime("%d %b %Y") %></div>
             <%= render 'lesson_card', lesson: lesson %>
+            <% date = lesson.start_date_time.localtime.strftime("%d %b %Y") %>
+            <% else %>
+              <%= render 'lesson_card', lesson: lesson %>
+            <% end %>
           <% end %>
         </div>
     <% end %>
