--- a/app/views/coach/lessons/new.html.erb
+++ b/app/views/coach/lessons/new.html.erb
@@ -11,7 +11,7 @@
             <%= f.association :location %>
             <%= f.input :price, as: :numeric %>
             <%= f.input :sport_id %>
-            <%= f.submit class:'btn btn-primary float-right' %>
+            <%= f.submit class:'btn button-primaryfloat-right' %>
     <% end %>
   </div>
 </div>
