--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
+    <%= f.button :submit, "Sign up", class: 'btn button-primary' %>
   </div>
 <% end %>
 
