--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -16,7 +16,7 @@
         <li><p>Price: <strong><%= humanized_money_with_symbol @order.amount %></strong></li>
       </ul>
 
-      <button id="pay" class="btn btn-primary">Pay</button>
+      <button id="pay" class="btn button-primary">Pay</button>
 
       <script src="https://js.stripe.com/v3/"></script>
       <script>
