--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [ lesson, review ] do |f| %>
   <%= f.input :content %>
   <%= f.input :rating %>
-  <%= f.submit ("Create"), class: 'btn btn-primary' %>
+  <%= f.submit ("Create"), class: 'btn button-primary' %>
   <% end %>
